--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,10 +4,12 @@
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
+  <div class="topnav">
+    <a href = "/flights">All Flights</a>
+    <a href = "/flights/new">Add Flight</a>
+  </div>
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
-    <a href = "/flights">All Flights</a>
-    <a href = "/flights/new">Add Flight</a>
   </body>
 </html>
