--- a/views/Flights/new.ejs
+++ b/views/Flights/new.ejs
@@ -30,7 +30,7 @@
     <input type="text" name="flightNo">
   </label><br>
   <label>Departs:
-    <input <input type="datetime-local" id="meeting-time" name="departs">
+    <input type="datetime-local" id="flight-time" name="departs">
   </label><br>
   <input type="submit" value="Add Flight">
 </form>
