--- a/views/Flights/new.ejs
+++ b/views/Flights/new.ejs
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <title>Document</title>
+    <div class="topnav">
+        <a href = "/flights">All Flights</a>
+        <a href = "/flights/new">Add Flight</a>
+      </div>
 </head>
 <body>
     <h2>Enter a New Flight</h2>
