adds new flight option and arrivals

--- a/views/Flights/index.ejs
+++ b/views/Flights/index.ejs
@@ -32,6 +32,7 @@
             <td class="over"><%= f.departs %></td>
                <% } else { %> 
                  <td><%= f.departs %></td>  
+                 <td><a href="/flights/<%= f._id %>">DETAILS</a></td>
                </tr>
               <% } %> 
         <% }); %>
