--- a/views/tickets/new.ejs
+++ b/views/tickets/new.ejs
@@ -6,7 +6,7 @@
     <label>Seat
             <input type="text" name="seat" required pattern="[A-F][1-9]\d?">
     </label><br>
-    <label>Price
+    <label>Price: $
             <input type="text" name="price">
     </label><br>
     <br>
